[tool.poetry]
name = "reamenu"
version = "0.1.0"
description = "ReaMenus, the community-driven menuset for Cockos REAPER"
authors = ["mikestopcontinues", "RCJacH"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
